--- a/index.html
+++ b/index.html
@@ -645,12 +645,14 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>11.4 Reduce or cease state government requests for skilled visas from the federal government.</li>
  <li>11.5 Use the platform of state parliament to call on the federal government to take action to:
   <ul>
-   <li>Crack down on businesses that employ illegal workers.</li>
-   <li>Require all visitors on temporary visas to have a return ticket booked.</li>
-   <li>Enhance data sharing between agencies and businesses including airlines to flag overstays, and transactions such as flight cancellations suggesting likely intent to overstay.</li>
-   <li>Provide the Border Force with the resources to prevent illegal visa overstays.</li>
-   <li>Reduce unnecessary visas for work that we can train Australians to do.</li>
-   <li>Make immigration reciprocal, balanced and diverse. Ensure that arrivals from any one country do not exceed departures to that same country by more than 10&#8239;000 (or some lower number).</li>
+   <li>11.5.1 Crack down on businesses that employ illegal workers.</li>
+   <li>11.5.2 Require all visitors on temporary visas to have a return ticket booked.</li>
+   <li>11.5.3 Enhance data sharing between agencies and businesses including airlines to flag overstays, and transactions such as flight cancellations suggesting likely intent to overstay.</li>
+   <li>11.5.4 Provide the Border Force with the resources to prevent illegal visa overstays.</li>
+   <li>11.5.5 Reduce unnecessary visas for work that we can train Australians to do.</li>
+   <li>11.5.6 Make immigration reciprocal, balanced and diverse. Ensure that arrivals from any one country do not exceed departures to that same country by more than 10&#8239;000 (or some lower number).</li>
+   <li>11.5.7 Require the ABS to measure and report the total population in addition to the existing resident population data.</li>
+   <li>11.5.8 Require the ABS to measure and report the net arrivals in addition to the existing net migration data.</li>
   </ul>
  </li>
  <li>11.6 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
