--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
    <li>11.5.5 Reduce unnecessary visas for work that we can train Australians to do.</li>
    <li>11.5.6 Make immigration reciprocal, balanced and diverse. Ensure that arrivals from any one country do not exceed departures to that same country by more than 10&#8239;000 (or some lower number).</li>
    <li>11.5.7 Require the ABS to measure and report the total population in addition to the existing resident population data.</li>
-   <li>11.5.8 Require the ABS to measure and report the net arrivals in addition to the existing net migration data.</li>
+   <li>11.5.8 Require the ABS to measure and report net arrivals in addition to the existing net migration data.</li>
   </ul>
  </li>
  <li>11.6 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
