--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
 <section id="podcast" class="content-section responsive-width">
 
-<p>You can listen to (or watch) a podcast version of this website on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>, <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or right here:
+<p>You can listen to a podcast version of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>:
 
-<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/0OgcLqFbmoG5ZxTQNLFg3c/video?utm_source=generator" width="381" height="677" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </section> <!--/podcast-->
 
