--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <li>Increase the accountability, efficiency and competence of our parliament and our policy-making.</li>
  </ul>
  
- <p>That might seem like a lot, but that's only because the bar has been set so low over the last 50 years. Most of the above is achievable with an adequate plan and enough people supporting it.</p>
+ <p>That might seem like a lot, but that's only because the bar has been set so low over the last 50 years. Most of the above is achievable with enough people working together on an adequate plan and enough people supporting it.</p>
  <p>The only thing we need to solve all of these crises is better policy,<br>
  and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
  <p>We need to elect people who will think and speak independently about better policy and better politics; who are passionate about doing that, capable of doing it, and free to do it; who can collaborate positively with everyone else in parliament across party lines to help get good policy through parliament, while maintaining the freedom to independently advocate for their electorate, and who will use the platform of parliament to support the movement towards a better way of doing politics in Australia.</p>
