--- a/index.html
+++ b/index.html
@@ -130,18 +130,22 @@
  <ul>
   <li>Solve the cost of living crisis and the housing crisis;</li>
   <li>Protect and improve our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
-  <li>Address the pollution that caused the algae crisis so the algae doesn't come back;</li>
   <li>Solve the aged care and hospital crisis, including the ramping crisis;</li>
+  <li>Address the pollution that caused the algae crisis so the algae doesn't come back;</li>
+  <li>Solve the police staffing crisis;</li>
   <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other harmful advertising;</li>
   <li>Solve the underemployment crisis;</li>
-  <li>Solve the police staffing crisis;</li>
   <li>Support measures to protect animals from unnecessary harm and cruelty;</li>
-  <li>Solve the corruption crisis;</li>
   <li>Forge a better way of doing politics and a more democratic political system;</li>
   <li>Increase the accountability, efficiency and competence of our parliament and our policy-making.</li>
  </ul>
- 
- <p>That might seem like a lot, but that's only because the bar has been set so low over the last 50 years. Most of the above is achievable with enough people working together on an adequate plan and enough people supporting it.</p>
+
+ <!-- <p>That isn't to say that my plan is perfect. Nor is it to claim I can solve any of this by myself. But I do believe most of the above is achievable with enough people working together on an adequate plan and enough people supporting it.</p>
+
+ <p>If elected I will work with others to improve my plans, or improve their plans, and try to get them implemented. Even in the best case scenario, we won't be able to solve all of the above in my first term, but we need to start work on all of it, and for that we need a comprensive plan that sincerely attempts to solve all of the above, not just policies to mitigate our problems here and there.</p>
+
+ <p>I hope this website or my videos will demonstrate the degree of my ability to contribute.</p> -->
+
  <p>The only thing we need to solve all of these crises is better policy,<br>
  and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
  <p>We need to elect people who will think and speak independently about better policy and better politics; who are passionate about doing that, capable of doing it, and free to do it; who can collaborate positively with everyone else in parliament across party lines to help get good policy through parliament, while maintaining the freedom to independently advocate for their electorate, and who will use the platform of parliament to support the movement towards a better way of doing politics in Australia.</p>
