--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <section id="podcast" class="content-section responsive-width">
 
-<p>Most people won't want to read all of this, but the most important ideas behind my campaign are explained in the first two 90 second videos.</p>
+<p>Most people won't want to read all 10 000 words of this, but the most important ideas behind my campaign are explained in the first two 90 second videos.</p>
 
 <p>You can listen to a podcast version of the first part of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>.
 
