--- a/index.html
+++ b/index.html
@@ -148,7 +148,15 @@
 
  <p>I hope this website or my videos will demonstrate the degree of my ability to contribute.</p> -->
 
- <p>The only thing we need to solve all of these crises is better policy,<br>
+ <p>But I can't implement such a plan on my own. What I can promise to do is to work hard to influence state and federal governments by:</p>
+
+ <ul>
+  <li>Working collaboratively with them; discussing issues with them directly;</li>
+  <li>Publicly elucidating their failures where necessary, when positive collaboration fails;</li>
+  <li>Supporting other good independent candidates at subsequent federal and state elections, to create a national movement towards better politics;</li>
+ </ul>
+
+ <p>The only thing we need to solve all of the above crises is better policy,<br>
  and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
  <p>We need to elect people who will think and speak independently about better policy and better politics; who are passionate about doing that, capable of doing it, and free to do it; who can collaborate positively with everyone else in parliament across party lines to help get good policy through parliament, while maintaining the freedom to independently advocate for their electorate, and who will use the platform of parliament to support the movement towards a better way of doing politics in Australia.</p>
  <p>It's not just about how the candidate is going to vote in parliament or whether they will be in government or hold the balance of power.</p>
