--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
 
  <p>I hope this website or my videos will demonstrate the degree of my ability to contribute.</p> -->
 
- <p>But I can't implement such a plan on my own. What I can promise to do is to work hard to influence state and federal governments by:</p>
+ <p>But I can't implement such a plan on my own. What I can promise to do is to work hard to influence state and federal governments. I will</p>
 
  <ul>
-  <li>Working collaboratively with them; discussing issues with them directly;</li>
-  <li>Publicly elucidating their failures where necessary, when positive collaboration fails;</li>
-  <li>Supporting other good independent candidates at subsequent federal and state elections, to create a national movement towards better politics;</li>
+  <li>Work collaboratively with them; discussing issues with them directly;</li>
+  <li>Publicly elucidate their failures where necessary, if positive collaboration fails;</li>
+  <li>Support other good independent candidates at subsequent federal and state elections, to create a national movement towards better politics;</li>
  </ul>
 
  <p>The only thing we need to solve all of the above crises is better policy,<br>
