--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <section id="podcast" class="content-section responsive-width">
 
-<p>Most people won't want to read all 10 000 words of this, but the most important ideas behind my campaign are explained in the first two 90 second videos.</p>
+<p>Most people won't want to read all 10 000 words of this, but the most important ideas behind my campaign are explained in the first two 90-second videos.</p>
 
 <p>You can listen to a podcast version of the first part of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>.
 
@@ -228,9 +228,9 @@
 
 <h2>My initial policies</h2>
 
-<p>I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+<p>Since I will work for the people of Waite, my priorities have to be determined by the people of Waite. I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
-<p>Here is a (very) quick summary of most my policies:</p>
+<p>Here is a (very) quick summary of most of my policies:</p>
 
 <iframe width="366" height="651" src="https://www.youtube.com/embed/38VHuKiLySk" title="Quick summary of my policies as an independent for Waite (Mitcham Area), Adelaide, South Australia." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -486,7 +486,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
 <p>Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour</p>
 
-<p>Require the Reserve Bank to develop a new cost of living index, in addition to the CPI. The new cost of living index would be designed to accurately measure changes in the overall cost of living including interest payments and applying the constant quality principle to housing (such as location and total size of the property), neither of which are involved in the CPI.</p>
+<p>Require the Reserve Bank to develop a new cost of living index, in addition to the CPI. The new cost of living index would be designed to accurately measure changes in the overall cost of living including interest payments and applying the constant quality principle to housing (such as location and total size of the property), neither of which is involved in the CPI.</p>
 
 <h3 id="3_Housing">Housing<br>
 </h3>
@@ -497,7 +497,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 <p>Housing policies from our political parties threaten two opposite extremes:</p>
 
 <ul>
- <li>One set of policies tries to assist buyers in ways that simply hyperinflate property prices and as a result fail to make housing more affordable.</li>
+ <li>One set of policies tries to assist buyers in ways that simply hyperinflate property prices and as a result fails to make housing more affordable.</li>
  <li>The other set of policies threatens to crash the housing market, which most voters won't accept.</li>
 </ul>
 
@@ -576,7 +576,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>6.2.5 Allow psychologists to assist psychiatrists in mental hospitals.</li>
  <li>6.2.6 Hire more social workers and occupational therapists to assist psychiatrists in our mental hospitals.</li>
  <li>6.2.7 Investigate the viability of specialist graduate medical programs at our universities, so that qualified health professionals can become specialist doctors by learning only what is relevant to a chosen specialty.</li>
- <li>6.2.8 Create a new position in emergency departments called a medic, ranked between a nurse and a doctor, who specialises on the intermediate work that lies around the overlap between the work of nurses and doctors, improving care through specialised emergency department training and encouraging both genders to work in this kind of role.</li>
+ <li>6.2.8 Create a new position in emergency departments called a medic, ranked between a nurse and a doctor, who specialises in the intermediate work that lies around the overlap between the work of nurses and doctors, improving care through specialised emergency department training and encouraging both genders to work in this kind of role.</li>
  <li>6.3 Increase the number of rehab facilities.</li>
 </ul>
 
@@ -593,7 +593,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
 <p>Despite having more money coming in from minerals (per capita) than Victoria, New South Wales or the ACT, our life expectancy and incomes are lower, and South Australian government debt is almost $40 billion and forecast to rise to almost $50 billion by the end of the decade. This is a greater fiscal risk than federal debt since state governments do not have control of the money supply. It also results in a higher portion of interest leaving the state.</p>
 
-<p>A portion of this debt is due to improper spending, but cutting such spending by itself will not be adequate to address all of our crises and the debt at the same time. Underfunding from the federal government is largely to blame. The federal government gives our natural resources away to corporations without charging properly for them, fail to adequately tax billionaires and decamillionaires, and then fail to provide struggling states like South Australia with adequate funding for our desperately failing services. I will use the platform of state parliament to call on the federal government to fund struggling states like South Australia properly. Even more importantly, voting for me will encourage other prospective independents to run at the federal election with similar policies.</p>
+<p>A portion of this debt is due to improper spending, but cutting such spending by itself will not be adequate to address all of our crises and the debt at the same time. Underfunding from the federal government is largely to blame. The federal government gives our natural resources away to corporations without charging properly for them, fails to adequately tax billionaires and decamillionaires, and then fails to provide struggling states like South Australia with adequate funding for our desperately failing services. I will use the platform of state parliament to call on the federal government to fund struggling states like South Australia properly. Even more importantly, voting for me will encourage other prospective independents to run at the federal election with similar policies.</p>
 
 <h4 id="8.0_Resource_Pricing">Stop giving our resource wealth away (almost) for free<br>
  <small>(8.0_Resource_Pricing)</small>
@@ -751,7 +751,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
   <li id="17.1_ECSA_Funding">17.1 Provide ECSA with adequate funding to provide information to every voter about every candidate in their electorate and their policies. It's not expensive to send a pamphlet to every voter. It ensures a balanced amount of space and advertising for each candidate, and it also allows the following policy:</li>
   <li id="17.2_Spending_Cap">17.2 Tighten the cap on candidate spending. Although large political donations have been banned, wealthy or otherwise well-resourced candidates can still spend up to $100&#8239;000 on their campaign during the expenditure period alone, and as much as they like outside the expenditure period, while other candidates may not be able to afford spending even $10&#8239;000. This creates an unfair disadvantage for less wealthy candidates, and even some of the wealthier candidates might prefer to spend less than $100&#8239;000 on the condition that none of their opponents is spending more than they are. Since the upfront advance funding for new candidates is $5000, the default statewide cap should be lowered to $10&#8239;000 per candidate in the pre-election period, with candidates having the right to negotiate a different cap for their electorate between $5000 and $100&#8239;000 if the majority of candidates in that electorate agree to it. There should also be a cap introduced for total expenditure in the years outside the pre-election period.</li>
   <li id="17.3_Campaigning_Ban">17.3 Ban political campaigning at polling booths. It's annoying, and it creates further bias towards candidates with more resources.</li>
-  <li id="17.4_Address_End">17.4 End the requirement for political candidates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, eg. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
+  <li id="17.4_Address_End">17.4 End the requirement for political candidates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, e.g. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
   <li id="17.5_Electorate_statistics">17.5 Provide the South Australian branch of the ABS with enough funding to gather and publish data on what each South Australian state electorate wants from government, and what experts support. Without this data, our democracy cannot function as intended: politicians are not accountable, and politicians who want to be accountable do not have the data they need to best serve their community.</li>
   <!-- <li>17.X Hold council elections on the same day as state elections in order to increase council voting and thereby increase accountability of local councils. Allow candidates to run for multiple positions (but not multiple wards/electorates), such as mayor and MP, but only accept one of the positions if they win more than one. Due to our preferential voting system, votes can easily be redistributed if a candidate wins more than one position and has to turn one down.</li> -->
  </ul>
@@ -905,7 +905,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <p>For a deeper discussion of the related underpayment crisis, and my creative writing, see <a href="https://alecgargett.github.io/alecgargett-space">my old artist website</a>.</p>
 </article>
 <article id="violence">
- <h3>The harder problem of global injustice and violence.</h3>
+ <h3>The harder problem of global injustice and violence</h3>
  <p>Although I am confident that we can solve most of our crises listed above locally, there are global problems that are much harder to solve, like the problems of global pollution, war and unjust violence. I'll do what I can to come up with a solution, and support others working on a solution. I am confident that we can show leadership to the rest of the world through our actions to address our own problems here in South Australia, and that this will put us in a position to have a better influence on world affairs.
 </p>
 </article>
@@ -915,7 +915,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 <p>By itself, even the most comprehensive set of policies is not a complete solution without a viable strategy. To get good policies implemented, we need to build a political movement that will be taken seriously by the government, and become a part of government.
 We also need to address what is fundamentally broken in our major parties. If a major party cannot be fixed, it needs to be replaced by independents, and if necessary by new political parties, that are designed to hold politicians accountable to their electorates, rather than pushing some other agenda of the party or its donors.
 </p>
-<p>If I am elected, I won't be resigned to what I can do within state parliament to influence state policy as a single MP. I will use the platform of state parliament to support the movement toward a better democracy, which will influence both the state and federal government to do better.
+<p>If I am elected, I won't be resigned to what I can do within state parliament to influence state policy as a single MP. I will use the platform of state parliament to support the movement towards a better democracy, which will influence both the state and federal government to do better.
 </p>
 
 <iframe width="381" height="677" src="https://www.youtube.com/embed/G2Lg5Om-VMo" title="Announcing my campaign as an Independent for Waite #southaustralia #auspol" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
