remove-spotify-vid

--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
   <small>(18.0_Support_Artists)</small>
  </h4>
 
- <iframe width="381" height="677" src="https://www.youtube.com/embed/5ZrMfvv0uzM" title="How to fix the Spotify problem, and get artists paid fairly." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<!--  <iframe width="381" height="677" src="https://www.youtube.com/embed/5ZrMfvv0uzM" title="How to fix the Spotify problem, and get artists paid fairly." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
  
  <p>Although South Australians pride ourselves on our local arts scene, it's not as strong as it could be because not all artists are fairly paid, especially musicians and recording artists. Even very popular recording artists are often not quite popular enough to make a good living. I will support the local arts scene in whatever way I can and try to ensure that all South Australian artists are fairly paid based on the quality, quantity and popularity of their work, with adequate government funding to artists.</p>
  
