--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
  <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year.</p>
 
- <h4 id="19.6_Healthier_Drinks">More diet soft drink than regular soft drink<br>
+ <h4 id="19.6_Healthier_Drinks">More diet soft drink options than regular soft drink options<br>
   <small>(19.6_Healthier_Drinks)</small>
  </h4>
 
