--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@
   </li>
   <ul class="sub-toc-list">
    <li>
-    <a href="#5.1_Build_Better">Build high quality housing instead of destroying it</a> (5.1)
+    <a href="#5.1_Build_Better">Build high-quality housing instead of destroying it</a> (5.1)
    </li>
    <li>
-    <a href="#5.1_Build_Better">Build high quality public housing in appropriate locations</a> (5.1)
+    <a href="#5.1_Build_Better">Build high-quality public housing in appropriate locations</a> (5.1)
    </li>
    <li>
     <a href="#5.2_Protect_Better">Protect the beauty of our suburbs, our older buildings and our hills</a> (5.2)
@@ -533,7 +533,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 <p>To solve both of these issues we could:</p>
 
 <ul>
- <li>4.1 Require large-portfolio land and housing investors to pay for an assessment of investment properties by a dedicated government agency. This agency will then use this assessment to set a limit on the rent and the sale price, based on the property assessment and a democratically determined housing price growth limit. This limit will be high enough to prevent housing prices from crashing, and allow home-owners to maintain the value on their primary residences, but low enough to prevent hyperinflation and price gouging by large portfolio investors.</li>
+ <li>4.1 Require large-portfolio land and housing investors to pay for an assessment of investment properties by a dedicated government agency. This agency will then use this assessment to set a limit on the rent and the sale price, based on the property assessment and a democratically determined housing price growth limit. This limit will be high enough to prevent housing prices from crashing, and allow home-owners to maintain the value on their primary residences, but low enough to prevent hyperinflation and price gouging by large-portfolio investors.</li>
  <li>4.2 Incentivise or require wealthy property investors to offer their properties to any past residents in order of how long they have lived there, so that those with the greatest sentimental attachment to the property have the option to buy or rent the property at no more than the price limit.</li>
  <li>4.3 If there are no past residents who are interested in buying or renting the property at the offered price (no more than the price limit), the agency will determine which applicant it should be sold or rented to based on their degree of need.</li>
 </ul>
@@ -817,7 +817,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
  <p>Fund science, science integrity and science communication when it comes to the environmental causes of mental illness and violence, and develop science-based policy to address the causes of mental illness and violence. The science on the causes of mental illness and violence is inadequate, and the good science that has been done has not been adequately communicated to the public, who are exposed to simplistic and incorrect narratives about the causes of mental illness and violence, some of which increase conflict and hatred and lead to more violence.</p>
 
- <h4 id="19.4_Regulate_Advertising">Prevent harm from advertising and provide better info<br>
+ <h4 id="19.4_Regulate_Advertising">Prevent harm from advertising and provide better labelling<br>
   <small>(19.4_Regulate_Advertising)</small>
  </h4>
 
