--- a/index.html
+++ b/index.html
@@ -118,9 +118,13 @@
 
 <section id="podcast" class="content-section responsive-width">
 
-<p>Most people won't want to read all 10 000 words of this, but the most important ideas behind my campaign are explained in the first two 90-second videos.</p>
+<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite. I've been preparing for this job since I was 19, and I'm now 37. For the last 18 years I've been doing the deep thinking that is lacking from parliament, and now I have a plan.
 
-<p>You can listen to a podcast version of the first part of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>.
+<p>Most people won't want to read all 10 000 words of the summary of my plan on this website, which is fine, because the most important ideas behind my campaign are explained in the first two 90-second videos, and I will be posting more short videos on Youtube and social media betewen now and the election.</p>
+
+<p>You can also listen to a podcast version of the first part of an older version of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>.</p>
+
+<p>Here is the first 90 second video introducing one of the core ideas behind my campaign:</p>
 
 <iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -128,7 +132,7 @@
 
 <section id="plan" class="content-section responsive-width">
  <h2>My plan</h2>
- <p>Hi. I'm Alec Gargett, and I have a plan to:</p>
+ <p>I have a plan to:</p>
  <ul>
   <li>Solve the cost of living crisis and the housing crisis;</li>
   <li>Protect and improve our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
@@ -148,13 +152,16 @@
 
  <p>I hope this website or my videos will demonstrate the degree of my ability to contribute.</p> -->
 
- <p>But I can't implement such a plan on my own. What I can promise to do is to work hard to influence state and federal governments. I will</p>
+ <p>I can't implement such a plan on my own. What I can promise to do is to work hard to influence state and federal governments. I will</p>
 
  <ul>
   <li>Work collaboratively with them; discussing issues with them directly;</li>
   <li>Publicly elucidate their failures where necessary, if positive collaboration fails;</li>
   <li>Support other good independent candidates at subsequent federal and state elections, to create a national movement towards better politics;</li>
+  <li>Use the platform of parliament to better advocate for our state and our electorate;</li>
  </ul>
+
+ <p>Perhaps even more importantly, whether I win or not, your vote will send a message to the state parliament, the federal parliament, and potential candidates accross Australia about the quality of policy thinking, problem solving and political system that Australians want to see.<p>
 
  <p>The only thing we need to solve all of the above crises is better policy,<br>
  and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
