--- a/index.html
+++ b/index.html
@@ -118,9 +118,14 @@
 
 <section id="podcast" class="content-section responsive-width">
 
-<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite. I've been preparing for this job since I was 19, and I'm now 37. For the last 18 years I've been doing the deep thinking that is lacking from parliament, and now I have a plan.
+<p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
+ I've been preparing for this job since I was 19, and I'm now 37.<br>
+ For the last 18 years I've been doing the deep thinking that is lacking from parliament,<br>
+ and now I have a plan.
 
-<p>Most people won't want to read all 10 000 words of the summary of my plan on this website, which is fine, because the most important ideas behind my campaign are explained in the first two 90-second videos, and I will be posting more short videos on Youtube and social media betewen now and the election.</p>
+<p>Most people won't want to read all 10 000 words of the summary of my plan on this website, which is fine.<br>
+The most important ideas behind my campaign are explained in the first two 90-second videos.<br>
+I will be posting more short videos on Youtube and social media betewen now and the election.</p>
 
 <p>You can also listen to a podcast version of the first part of an older version of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>.</p>
 
@@ -152,7 +157,7 @@
 
  <p>I hope this website or my videos will demonstrate the degree of my ability to contribute.</p> -->
 
- <p>I can't implement such a plan on my own. What I can promise to do is to work hard to influence state and federal governments. I will</p>
+ <p>I can't implement such a plan on my own. What I can promise to do is to work hard to influence state and federal governments. I will:</p>
 
  <ul>
   <li>Work collaboratively with them; discussing issues with them directly;</li>
