--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
  <!-- <p>That isn't to say that my plan is perfect. Nor is it to claim I can solve any of this by myself. But I do believe most of the above is achievable with enough people working together on an adequate plan and enough people supporting it.</p>
 
- <p>If elected I will work with others to improve my plans, or improve their plans, and try to get them implemented. Even in the best case scenario, we won't be able to solve all of the above in my first term, but we need to start work on all of it, and for that we need a comprensive plan that sincerely attempts to solve all of the above, not just policies to mitigate our problems here and there.</p>
+ <p>If elected I will work with others to improve my plans, or improve their plans, and try to get them implemented. Even in the best case scenario, we won't be able to solve all of the above in my first term, but we need to start work on all of it, and for that we need a comprehensive plan that sincerely attempts to solve all of the above, not just policies to mitigate our problems here and there.</p>
 
  <p>I hope this website or my videos will demonstrate the degree of my ability to contribute.</p> -->
 
@@ -166,7 +166,7 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>Use the platform of parliament to better advocate for our state and our electorate;</li>
  </ul>
 
- <p>Perhaps even more importantly, whether I win or not, your vote will send a message to the state parliament, the federal parliament, and potential candidates accross Australia about the quality of policy thinking, problem solving and political system that Australians want to see.<p>
+ <p>Perhaps even more importantly, whether I win or not, your vote will send a message to the state parliament, the federal parliament, and potential candidates across Australia about the quality of policy thinking, problem solving and political system that Australians want to see.<p>
 
  <p>The only thing we need to solve all of the above crises is better policy,<br>
  and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
