--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
  For the last 18 years I've been doing the deep thinking that is lacking from parliament,<br>
  and now I have a plan.
 
-<p>Most people won't want to read all 10 000 words of the summary of my plan on this website, which is fine.<br>
+<p>Most people won't want to read all 10&#8239;000 words of the summary of my plan on this website, which is fine.<br>
 The most important ideas behind my campaign are explained in the first two 90-second videos.<br>
 I will be posting more short videos on Youtube and social media between now and the election.</p>
 
@@ -166,7 +166,7 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>Use the platform of parliament to better advocate for our state and our electorate;</li>
  </ul>
 
- <p>Perhaps even more importantly, whether I win or not, your vote will send a message to the state parliament, the federal parliament, and potential candidates across Australia about the quality of policy thinking, problem solving and political system that Australians want to see.<p>
+ <p>Perhaps even more importantly, whether I win or not, your vote will send a message to the state parliament, the federal parliament, and potential candidates across Australia about the quality of policy thinking, problem solving and political system that Australians want to see.</p>
 
  <p>The only thing we need to solve all of the above crises is better policy,<br>
  and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
