--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
  <p>I hope this website or my videos will demonstrate the degree of my ability to contribute.</p> -->
 
- <p>I can't implement such a plan on my own. What I can promise to do is to work hard to influence state and federal governments. I will:</p>
+ <p>I can't implement or even perfect such a plan on my own. What I can promise to do is to work hard to influence state and federal governments. I will:</p>
 
  <ul>
   <li>Work collaboratively with them; discussing issues with them directly;</li>
